--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,83 @@
   --Slate500: hsl(200, 26%, 54%);
   --Slate700: hsl(200, 24%, 40%);
   --Slate900: hsl(202, 55%, 16%);
+  --SlateDark: hsl(202, 56%, 12%);
 }
 
 body {
   background: hsl(var(--background-hsl));
+}
+
+.bg-lime {
+  background-color: var(--Lime-color);
+}
+
+.text-lime {
+  color: var(--Lime-color);
+}
+
+.bg-red {
+  background-color: var(--Red-color);
+}
+
+.text-red {
+  color: var(--Red-color);
+}
+
+.bg-white {
+  background-color: var(--White-color);
+}
+
+.text-white {
+  color: var(--White-color);
+}
+
+.bg-slate100 {
+  background-color: var(--Slate100);
+}
+
+.text-slate100 {
+  color: var(--Slate100);
+}
+
+.bg-slate300 {
+  background-color: var(--Slate300);
+}
+
+.text-slate300 {
+  color: var(--Slate300);
+}
+
+.bg-slate500 {
+  background-color: var(--Slate500);
+}
+
+.text-slate500 {
+  color: var(--Slate500);
+}
+
+.bg-slate700 {
+  background-color: var(--Slate700);
+}
+
+.text-slate700 {
+  color: var(--Slate700);
+}
+
+.bg-slate900 {
+  background-color: var(--Slate900);
+}
+
+.text-slate900 {
+  color: var(--Slate900);
+}
+
+.bg-slate-dark {
+  background-color: var(--SlateDark);
+}
+
+.text-slate-dark {
+  color: var(--SlateDark);
 }
 
 @layer utilities {
