--- a/src/app/components/InputForm/InputForm.styles.css
+++ b/src/app/components/InputForm/InputForm.styles.css
@@ -17,6 +17,11 @@ label {
     font-weight: 500;
 }
 
+.input-container:hover {
+    border: 1px solid var(--Slate900);
+    box-shadow: 0 0 0 1px var(--Slate500);
+}
+
 .input-error {
     border: 1px solid var(--Red-color);
     box-shadow: 0 0 0 1px var(--Red-color);
