--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Plus Jakarta Sans';
+  font-weight: 500;
+  src: url('assets/fonts/static/PlusJakartaSans-Medium.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Plus Jakarta Sans';
+  font-weight: 700;
+  src: url('assets/fonts/static/PlusJakartaSans-Bold.ttf') format('truetype');
+}
+
 :root {
   --background-hsl: 199, 81%, 94%;
   --Lime-color: hsl(61, 70%, 52%);
@@ -17,6 +29,7 @@
 
 body {
   background: hsl(var(--background-hsl));
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 .bg-lime {
